# SimpleAmqpClient

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: AmqpException.cpp  BasicMessage.cpp  Channel.cpp  ChannelImpl.cpp  TableImpl.cpp
src/SimpleAmqpClient/: BasicMessage.h  Bytes.h  Channel.h  ChannelImpl.h  Envelope.h  TableImpl.h  Util.h
testing/: CMakeLists.txt  connected_test.h  test_message.cpp
